<resources>
    <string name="app_name">Online Shop</string>
    <string name="intro_title">Step into your <font color="#FFBB86FC"> style\n A world of shoes</font></string>
    <string name="intro_text">Browse the latest styles from top brands\nGet personalized recommendations\nEnjoy fast, free shipping</string>
    <string name="button_text">Let\'s Get Started</string>
    <string name="intro_sign_in">Already have an account? <font color="#FFBB86FC">Sign In</font> </string>
    <string name="dash_greeting">Hello</string>
    <string name="dash_user">Guest</string>
    <string name="dash_brand">Official Brand</string>
    <string name="dash_recommend">Recommendation</string>
    <string name="dash_see_all">See All</string>
    <string name="dash_exp">Explorer</string>
    <string name="dash_cart">Cart</string>
    <string name="dash_fav">Wishlist</string>
    <string name="dash_order">My Order</string>
    <string name="dash_profile">Profile</string>
    <string name="holder_txt">Title</string>
    <string name="holder_currency">Rp. </string>
    <string name="rating">4.3</string>
    <string name="product_size">Select Size</string>
    <string name="product_desc">Description</string>
    <string name="product_buy">Buy Now</string>
    <string name="size">42</string>
    <string name="login_not_have_account">Don\'t have an account? <font color="#FFBB86FC">Register</font></string>
    <string name="login_text">Login</string>
    <string name="input_pass">Password</string>
    <string name="input_email">Email</string>
    <string name="register_text">Register</string>
    <string name="input_name">Name</string>
    <string name="logout">Logout</string>
    <string name="cart_empty">Your Cart is Empty</string>
    <string name="my_cart">My Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="ongkir">Biaya Ongkir</string>
    <string name="pajak">Total Pajak</string>
    <string name="total">Total</string>
    <string name="checkout">Check Out</string>
    <string name="plus_item">+</string>
    <string name="minus_item">-</string>
    <string name="total_item">0</string>
</resources>