<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <ImageView
                android:id="@+id/introLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/intro_logo"
                android:layout_marginTop="64dp" />

            <TextView
                android:id="@+id/introTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_title"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/introText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_text"
                android:textAlignment="center"
                android:layout_marginTop="32dp"
                android:lineSpacingExtra="10dp"
                android:textColor="@color/gray"/>
            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/startBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Button"
                android:layout_margin="32dp"
                android:background="@drawable/purple_bg"
                android:text="@string/button_text"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/introSignInText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_sign_in"
                android:textAlignment="center"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>