<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cartHolderLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:id="@+id/cartHolderImgVw"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/gray_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shoes" />

    <TextView
        android:id="@+id/cartHolderTitleVw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/holder_txt"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/cartHolderImgVw"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartHolderPricePerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/holder_currency"
        android:textColor="@color/purple"
        app:layout_constraintStart_toStartOf="@+id/cartHolderTitleVw"
        app:layout_constraintTop_toBottomOf="@+id/cartHolderTitleVw" />

    <TextView
        android:id="@+id/cartHolderPriceAllItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/holder_currency"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cartHolderPricePerItem" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/gray_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/cartPlusItem"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="2dp"
            android:background="@drawable/purple_bg"
            android:gravity="center"
            android:text="@string/plus_item"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cartMinusItem"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="2dp"
            android:background="@drawable/red_bg"
            android:gravity="center"
            android:text="@string/minus_item"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cartHolderTotalItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_item"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cartPlusItem"
            app:layout_constraintStart_toEndOf="@+id/cartMinusItem"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>