<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recommendLayout"
    android:layout_width="wrap_content"
    android:layout_height="215dp"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/recommendImgView"
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:background="@drawable/gray_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/shoes" />

    <ImageView
        android:id="@+id/favImgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/gray"
        tools:srcCompat="@drawable/btn_3" />

    <TextView
        android:id="@+id/priceTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/holder_currency"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recommendImgView" />

    <TextView
        android:id="@+id/ratingTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/priceTxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/priceTxtView" />

    <ImageView
        android:id="@+id/starImgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ratingTxtView"
        app:layout_constraintEnd_toStartOf="@+id/ratingTxtView"
        app:layout_constraintTop_toTopOf="@+id/ratingTxtView"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/titleTxtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:singleLine="true"
        android:text="@string/holder_txt"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTxtView" />

</androidx.constraintlayout.widget.ConstraintLayout>